# 03_python_in_data

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-db.txt  requirements.txt
src/: config.py  db.py  main.py  schema.sql
src/generators/: brand_generator.py  category_generator.py  product_generator.py  promotion_generator.py  promotion_product_generator.py  seller_generator.py
src/loaders/: insert_data.py
src/utils/: faker_utils.py  validators.py
