[tool.poetry]
name = "project03-python-in-data"
version = "0.1.0"
description = "Project 03 synthetic ecommerce data generator and loader."
authors = ["unigap-student <student@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
faker = "*"
numpy = "*"
pandas = "*"
python-dotenv = "*"
psycopg2-binary = "*"
sqlalchemy = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
